# UOC-M2.010-PAC1

./: .autotools  .cproject  .gitignore  .project  2010-participacions.txt  2010-propietats.txt  2010-transmissions.txt  2011-propietats.txt  M2.010-PAC1 Build (GNU).launch  README.md  build.sh  configure.ac  profile.sh
Joc01/: 2010-participacions.txt  2011-propietats.txt
src/: Makefile.am  boolean.h  dia.c  dia.h  fitxers.c  fitxers.h  fraccio.c  fraccio.h  fusio.c  fusio.h  g_compropietaris.c  lectura_propietats.c  lectura_propietats.h  lectura_transmissions.c  lectura_transmissions.h  linies.c  linies.h  llistat.c  llistat.h  operacio.h  participacio_llista.c  participacio_llista.h  participacio_node.c  participacio_node.h  propietari_llista.c  propietari_llista.h  propietari_node.c  propietari_node.h  propietat_llista.c  propietat_llista.h  propietat_node.c  propietat_node.h  registre_llista.c  registre_llista.h  registre_node.c  registre_node.h  transmissio_llista.c  transmissio_llista.h  transmissio_node.c  transmissio_node.h  (+2 more)
