g_compropietarisdir=/usr/local/bin/
g_compropietaris_PROGRAMS=g_compropietaris
g_compropietaris_SOURCES = \
	dia.c \
	fitxers.c \
	fraccio.c \
	fusio.c \
	g_compropietaris.c \
	lectura_propietats.c \
	lectura_transmissions.c \
	linies.c \
	llistat.c \
	participacio_llista.c \
	participacio_node.c \
	propietari_llista.c \
	propietari_node.c \
	propietat_llista.c \
	propietat_node.c \
	registre_llista.c \
	registre_node.c \
	transmissio_llista.c \
	transmissio_node.c \
	verificacio_participacions.c
